k8s/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgmais-backend
  namespace: pgmais
  labels:
    app: pgmais-backend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: pgmais-backend
  sessionAffinity: None
